tests/baselines/reference/parserErrorRecovery_ArgumentList6.errors.txt
==== tests/cases/compiler/parserErrorRecovery_ArgumentList6.ts (3 errors) ====
    Foo(,
        ~
!!! parserErrorRecovery_ArgumentList6.ts(1,5): error TS1003: Identifier expected.
         
!!! parserErrorRecovery_ArgumentList6.ts(1,6): error TS1005: ')' expected.
    ~~~
!!! parserErrorRecovery_ArgumentList6.ts(1,1): error TS2095: Cannot find name 'Foo'.